refactor: wrap pagination in a standalone section and move out of content-post, update index to call pagination directly; chore: update README.

--- a/style.css
+++ b/style.css
@@ -18,20 +18,23 @@ body {
     background-color: lightslategray;
 }
 
-header.site-header {
+header,
+footer {
     background-color: lightblue;
 }
 
-.hero {
+section {
+    border: 1px solid;
+    margin: 8px 0;
+}
+
+.hero,
+.pagination {
     background-color: lightpink;
 }
 
 article {
     background-color: lightseagreen;
-}
-
-footer.site-footer {
-    background-color: lightgreen;
 }
 
 .alert {
